--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,7 @@
               'animation-duration': '0.1s'
             });
             $(this).css({
-              'color': 'rgba(0, 51, 102, 1)'
+              'color': 'rgba(52, 152, 219, 1)'
             });
             i++;
           }
@@ -38,7 +38,7 @@
                'filter'         : 'blur(0px)'
             });
             $(this).css({
-              'color': '#ecf0f1'
+              'color': '#ffffff'
             });
             i++;
           }
