--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@
                'filter'         : 'blur(0px)'
             });
             $(this).css({
-              'color': '#ffffff'
+              'color': '#ecf0f1'
             });
             i++;
           }
