--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -20,7 +20,7 @@ $purple: #9b59b6;
 $dark-blue: #34495e;
 
 $main-color: $white;
-$background-color: $purple;
+$background-color: $dark-blue;
 $thrid-color: rgba(52, 152, 219, 0.8);
 
 // Heigths
