--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@
                'filter'         : 'blur(0px)'
             });
             $(this).css({
-              'color': '#ecf0f1'
+              'color': url(https://wallpaperwire.com/wp-content/uploads/2018/03/3D-HD-Wallpapers-5.jpg)
             });
             i++;
           }
