--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,7 +58,7 @@
     <div class="orta">
       <div class="ortala">
         <div class="resim">
-          <img alt="{{ site.title }}" src="{{ https://wallpaperwire.com/wp-content/uploads/2018/03/3D-HD-Wallpapers-5.jpgl }}/{{ site.picture }}">
+          <img alt="{{ site.title }}" src="{{ site.url }}/{{ site.picture }}">
         </div>
         <div class="pc">
           {% include nav-home.html %}
