--- a/_sass/syntax.scss
+++ b/_sass/syntax.scss
@@ -3,7 +3,7 @@ pre.highlight {
 }
 
 .highlight {
-	background-color: #49483e;
+	background-color: url(https://wallpaperwire.com/wp-content/uploads/2018/03/3D-HD-Wallpapers-5.jpg);
 	color: #f8f8f2;
 	border-radius: 4px;
 	pre {
