--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,7 +58,7 @@
     <div class="orta">
       <div class="ortala">
         <div class="resim">
-          <img alt="{{ site.title }}" src="{{ site.url }}/{{ site.picture }}">
+          <img alt="{{ }}" src="{{ site.url }}/{{ site.picture }}">
         </div>
         <div class="pc">
           {% include nav-home.html %}
