--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -7,7 +7,7 @@
       $(function() {
         i = 0;
         $('.menuAc').css({
-          'color': url(https://wallpaperwire.com/wp-content/uploads/2018/03/3D-HD-Wallpapers-5.jpg)
+          'color': url('https://wallpaperwire.com/wallpapers/Boho-Desktop-Wallpaper-39.jpg')
         });
         $('.menuAc').click(function(){
           $(this).next('.menuMobil').animate({width:'toggle'},350);
